Add Web UI server implementation and JSON encoding utilities
- Introduced `webui.h` for the Web UI server, including session management, HTTP request handling, and route handlers.
- Added `webui_json.h` for simple JSON encoding utilities compliant with RFC 7159.
- Implemented methods for encoding strings, numbers, booleans, and building JSON objects and arrays.
- The Web UI server operates over HTTP, serving embedded HTML/CSS/JS and providing a JSON API for data and actions.

--- a/config.json
+++ b/config.json
@@ -6,8 +6,7 @@
     {"host": "9.9.9.9", "port": 53, "name": "Quad9 DNS"}
   ],
   "upstream_proxies": [
-    {"type": "http", "host": "proxy.example.com", "port": 8080},
-    {"type": "socks5", "host": "socks.example.com", "port": 1080}
+    {"type": "socks5", "host": "127.0.0.1", "port": 10808}
   ],
   "interfaces": ["auto"],
   "health_check_interval": 60,
